<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FBE8DA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="296dp"
        android:layout_height="208dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/gambar_regist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:alpha="0"
        tools:alpha="100"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/description_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="14sp"
        android:hint="Email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_user"
        android:hint="Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_user">
        <com.example.submissionintermediate.customView.PwCustomView
            android:id="@+id/ed_login_password"
            android:alpha="0"
            tools:alpha="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:text="@string/login"
        android:alpha="0"
        tools:alpha="100"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/password_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/want_to_regis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_to_regis"
        android:textAlignment="center"
        android:textSize="12sp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_button_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/go_to_regis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:text="@string/click_here_register"
        app:layout_constraintStart_toEndOf="@+id/want_to_regis"
        app:layout_constraintTop_toBottomOf="@id/submit_button_login"
        android:alpha="0"
        tools:alpha="100"/>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>