<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE8DA"
    tools:context=".view.register.RegisterActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_regis"
        android:layout_width="265dp"
        android:layout_height="188dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/register_here"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_regis"
        tools:alpha="100" />

    <TextView
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        tools:alpha="100"
        android:text="@string/title_regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_regis" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:alpha="0"
            tools:alpha="100"
            android:hint="Username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_regis"
        android:hint="Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_regis">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_email"
            android:textSize="14sp"
            android:alpha="0"
            tools:alpha="100"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_user_regist"
        android:hint="Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/white"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_regis">
        <com.example.submissionintermediate.customView.PwCustomView
            android:id="@+id/ed_register_password"
            android:textSize="14sp"
            android:alpha="0"
            tools:alpha="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button_regis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:text="@string/sign_in"
        android:alpha="0"
        tools:alpha="100"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/password_user_regist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/already_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_to_login"
        android:textAlignment="center"
        android:textSize="12sp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_button_regis"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/go_to_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/click_here_login"
        app:layout_constraintStart_toEndOf="@+id/already_login"
        app:layout_constraintTop_toBottomOf="@id/submit_button_regis"
        android:alpha="0"
        tools:alpha="100"/>

</androidx.constraintlayout.widget.ConstraintLayout>